# ocaml

./: .gitignore  README.md
hello/: dune-project
hello/_build/default/.dune/: configurator  configurator.v2
hello/_build/default/lib/: hello.cmxs
hello/_opam/.opam-switch/: switch-state
hello/_opam/.opam-switch/config/: ocaml.config
hello/_opam/.opam-switch/install/: cmdliner.changes  cppo.changes  crunch.changes  fpath.changes  ocaml-base-compiler.changes  ocamlbuild.changes  ocamlfind.changes  odoc-parser.changes  odoc.changes  ptime.changes  re.changes  result.changes  seq.changes  topkg.changes  tyxml.changes  uutf.changes
hello/_opam/lib/: findlib.conf
hello/_opam/lib/astring/: astring.cmi  astring.cmti  astring.cmx  astring.cmxa  astring_char.cmx  astring_sub.cmx  astring_top.cma  astring_unsafe.cmx
hello/_opam/lib/camlp-streams/: camlp_streams.cma  camlp_streams.cmxa  genlex.cmt  genlex.cmti  genlex.cmx  stream.cmx
hello/_opam/lib/cmdliner/: cmdliner.cma  cmdliner.cmti  cmdliner.cmx  cmdliner.cmxs  cmdliner_arg.cmx  cmdliner_cline.cmx  cmdliner_cmd.cmx  cmdliner_exit.cmx  cmdliner_info.cmx  cmdliner_manpage.cmx  cmdliner_term_deprecated.cmx  cmdliner_trie.cmx
hello/_opam/lib/crunch/: crunch.cmt  crunch.cmti  crunch.cmxs  dune-package
hello/_opam/lib/dune/: opam
hello/_opam/lib/findlib/: Makefile.config  findlib.cmi  findlib.cmxs  findlib_config.cmi  findlib_top.cmxa  findlib_top.cmxs  fl_lint.cmi  fl_meta.cmi  fl_metascanner.cmi  fl_package_base.cmi  fl_split.cmi  fl_topo.cmi
hello/_opam/lib/fmt/: fmt.cmti  fmt.cmxa  fmt_cli.cmi  fmt_cli.cmx  (+5 more)
(+2726 files in other folders)
